<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TestProject</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="open_drawer">Drawer Open</string>
    <string name="close_drawer">Drawer Close</string>
    <string name="title_activity_input_info">InputInfoActivity</string>
    <string name="b_new_blood_entry">Add an entry</string>
    <string name="b_clear_data">Clear Data</string>
    <string name="l_date">Date</string>
    <string name="l_systolic">Systolic</string>
    <string name="l_diastolic">Diastolic</string>
    <string name="l_pulse">Pulse</string>
    <string name="l_welcome">Welcome</string>
    <string name="l_to">To</string>
    <string name="l_health_care">Health Care</string>
    <string name="b_edit_info">Edit Your Info</string>
    <string name="lName">Name</string>
    <string name="lGender">Gender</string>
    <string name="lMale">Male</string>
    <string name="lFemale">Female</string>
    <string name="lHeight">Height (in cm)</string>
    <string name="lWeight">Weight (in kg)</string>
    <string name="lYOB">Year of Birth</string>
    <string name="bSave">Save</string>
    <string name="bLoad">Load</string>

</resources>